src/ggrc/assets/stylesheets/_common.scss
/* ... */
.cancel-text {
  color: $black;
  &:hover {
    color: $black;
  }
}

.gray {
  color: $gray;
}

.green {
  color: $green;
}

.blue {
  color: $blue;
}

.yellow {
  color: $yellow;
}

.divider {
  width: 100%;
  height: 1px;
  background: $footerBorder;
  margin: 14px 0;
}

.undo {
  font-size: 12px;
  padding-left: 7px;
}

.read-only {
  text-decoration: none;
  color: $darkText;
  display: inline-block;
  a {
    text-decoration: none;
    color: $darkText;
    &:hover {
      text-decoration: none;
    }
  }
}

.objective-selector {
  .search-icon {
    background-image: image-url("magnifying-glass.png");
    background-repeat: no-repeat;
    @include background-size(21px 16px);
    background-position: right center;
    padding-right: 28px;
  }
  &.pull-left {
    margin-left: 4px;
  }
}

.tooltip {
  // The bootstrap default is incorrect with modals as of bootstrap 2.0.x
  z-index: 2000 !important;
}

// progress bar
.bar {
  float:left;
  &.bar-success {
    @include gradient-vertical(lighten($addBtn, 15%), $addBtn);
  }
  &.bar-danger {
    @include gradient-vertical(lighten($orange, 15%), $orange);
  }
  &.bar-warning {
    @include gradient-vertical(lighten($red, 15%), $red);
  }
}

.progress {
  &.progress-higher {
    margin-top:2px;
    margin-bottom:0;
    height:23px;
    .bar {
      height:23px;
      line-height:23px;
    }
  }
  .empty-progress {
    text-align:center;
    color:$gray;
    font-weight:normal;
  }
}

// buttons
.btn {
  font-size: $f-regular;
  font-weight: bold;
  @include box-shadow(none);
  .request-control & {
    padding: 3px 6px;
    line-height: 15px;
  }
  .response-control & {
    padding: 3px 6px;
    line-height: 15px;
  }
  i {
    margin-top: 1px;
  }
  &:hover {
    @include box-shadow(inset 0 0 2px rgba(0,0,0,0.3));
  }
  &.btn-footer {
    margin-top: 4px;
  }
  &.btn-add {
    color:$white;
    background: $addBtn;
    @include background-image(linear-gradient(center top, lighten($addBtn, 5%) 5%, darken($addBtn, 5%) 100% ));
    text-shadow: 1px 1px 1px $btnAddShadow;
    border: 1px solid $addBtnBorder;
    &:active {
      @include box-shadow(inset 0 0 3px $darkGray);
      @include background-image(linear-gradient(center top, darken($addBtn, 5%) 5%, lighten($addBtn, 5%) 100% ));
    }
    &:hover {
      color:$white;
    }
  }
  .open & {
    &.btn-add {
      color:$white;
      background: $addBtn;
      @include background-image(linear-gradient(center top, lighten($addBtn, 5%) 5%, darken($addBtn, 5%) 100% ));
      text-shadow: 1px 1px 1px $btnAddShadow;
      border: 1px solid $addBtnBorder;
      &:hover {
        color:$white;
      }
    }
  }
  .population-upload & {
    width: 100%;
    box-sizing: border-box;
    padding-left: 1px;
    padding-right: 3px;
  }
  &.pending-ajax {
    cursor: default;
    background:$widgetHeaderBgnd image-url('ajax-loader.gif') no-repeat 5px 6px;
    @include box-shadow(none);
    border: 1px solid $ajaxBtnDisabled;
    color: $ajaxGray;
    text-shadow: none;
    padding-left: 28px;
    &:hover {
      color: $ajaxGray;
    }
    &:active {
      background:$widgetHeaderBgnd image-url('ajax-loader.gif') no-repeat 5px 5px;
      border: 1px solid $ajaxBtnDisabled;
      @include box-shadow(none);
    }
  }
  &.btn-mini {
    font-size: $f-small;
    line-height: 13px;
    text-shadow: none;
    &.pending-ajax {
      background:$widgetHeaderBgnd image-url('ajax-loader.gif') no-repeat 5px 1px;
    }
  }
  &.btn-large {
    &.pending-ajax {
      background:$widgetHeaderBgnd image-url('ajax-loader.gif') no-repeat 5px 8px;
    }
  }
}

.btn-add,
.btn-warning,
.btn-danger {
  &.disabled {
    cursor: default;
    background-color: $btnActive;
    @include opacity(0.65);
    @include box-shadow(none);
    text-shadow: none;
    color: $responsTitle;
    border: 1px solid $warmGray;
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    &:active,
    &:hover {
      @include box-shadow(none);
      color: $responsTitle;
    }
  }
}
// Disabled state
.btn.disabled, .btn[disabled] {
  @include opacity(0.25);
}


// removing outline on anchor element
.nav-tabs,
.menu,
.btn,
.program-list {
  a {
    @include outline-fix();
  }
}

// show hide
.showhide {
  float:left;
  margin-top:8px;
}

// one line display of paragraphs
.oneline {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width:100%;
  &.expandable {
    cursor:pointer;
  }
  &.expand-on-hover {
    cursor:pointer;
  }
}

.inhover {
  cursor:pointer;
}

// RTF
.rtf {
  margin-bottom: 10px;
  line-height:1.2em;
  ul,
  ol {
    margin-bottom: 10px;
    margin-top: 10px;
    li {
      border: none !important;
      padding: 0;
      line-height:1.2em !important;
    }
  }
  blockquote {
    border:none;
  }
  p.no-data {
    color:$disabled;
    text-align:center;
  }
}

// Date input field - To see date icon just add class .date to input field
input.date {
  padding-left: 26px;
  @include background-size(368px 416px);
  background-image: image-url("grcicons/icons.png");
  background-repeat: no-repeat;
  background-position: -268px -364px;
  &.short-field {
    height: 16px !important;
    line-height: 16px !important;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
  }
}

//Making input 100% width of his parent element
input.input-block-level,
select.input-block-level {
  display: block;
  width: 100%;
  @include box-sizing(border-box);
  min-height: 28px;
}

//tree-structure no results
.no-result {
  text-align: center;
  font-weight: bold;
  color: $darkGray;
  line-height: 20px;
  font-size: $f-small;
  &.object-no-result {
    font-size: $f-regular;
    padding-top: 8px;
  }
}
/* ... */

